(regression tests) fixed more javac warnings in tests and helper classes